--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -28,6 +28,7 @@
             </tr>
             </thead>
             <tbody id="tbody">
+<!--            posts List 순회 : Java for-->
             {{#posts}}
                 <tr>
                     <td>{{id}}</td>
